--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <p>git commit -m" your meaningful commit message"</p>
       <p>git push</p>
     </div>
-    <img src="images/onehundredseventyfive-Jqw1BQOfAig-unsplash.jpg" alt="" />
+    <img
+      width="500px"
+      src="images/onehundredseventyfive-Jqw1BQOfAig-unsplash.jpg"
+      alt=""
+    />
   </body>
 </html>
